--- a/app/src/main/res/layout/cardview_task.xml
+++ b/app/src/main/res/layout/cardview_task.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <data>
-        <variable name="item" type="norinori6791.gmail.com.cycledo.model.Item" />
+        <variable name="item" type="norinori6791.gmail.com.cycledo.model.Task" />
 <!--        <variable name="onClick" type="norinori6791.gmail.com.cycledo.MainActivity.ItemClickListener" />-->
     </data>
 <LinearLayout
@@ -76,7 +75,7 @@
                 android:id="@+id/tv_id"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:text="@{Integer.toString(item.id)}"
+                android:text="@{Integer.toString(item._id)}"
                 android:visibility="gone" />
 
             <EditText
