--- a/app/src/main/res/layout/fragment_add.xml
+++ b/app/src/main/res/layout/fragment_add.xml
@@ -1,21 +1,315 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <data>
+        <variable
+            name="viewModel"
+            type="com.google.norinori6791.cycledo.ui.add.AddViewModel" />
+    </data>
 
-    <TextView
-        android:id="@+id/text_gallery"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:textAlignment="center"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:layout_height="match_parent">
+
+        <EditText
+            android:id="@+id/titleEditText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="@string/add_title"
+            android:inputType="textPersonName"
+            android:text="@={viewModel.title}"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"/>
+
+        <HorizontalScrollView
+            android:id="@+id/horizontal_scroll_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/colorPrimaryDark"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/titleEditText">
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+
+                <ImageButton
+                    android:id="@+id/action_undo"
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
+                    android:background="@null"
+                    android:contentDescription="@null"
+                android:onClickListener="@{(v)-> viewModel.clickUndo()}"
+                    android:src="@mipmap/undo" />
+
+                <ImageButton
+                    android:id="@+id/action_redo"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:background="@null"
+                android:contentDescription="@null"
+                android:onClickListener="@{(v)-> viewModel.clickRedo()}"
+                android:src="@mipmap/redo" />
+
+                <ImageButton
+                    android:id="@+id/action_bold"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:background="@null"
+                android:contentDescription="@null"
+                android:onClickListener="@{(v)-> viewModel.clickBold()}"
+                android:src="@mipmap/bold" />
+
+                <ImageButton
+                    android:id="@+id/action_italic"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:background="@null"
+                android:contentDescription="@null"
+                android:onClickListener="@{(v)-> viewModel.clickItalic()}"
+                android:src="@mipmap/italic"
+                />
+
+                <ImageButton
+                    android:id="@+id/action_subscript"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:background="@null"
+                android:contentDescription="@null"
+                android:onClickListener="@{(v)-> viewModel.clickSubscript()}"
+                android:src="@mipmap/subscript"
+                />
+
+                <ImageButton
+                    android:id="@+id/action_superscript"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:background="@null"
+                android:contentDescription="@null"
+                android:onClickListener="@{(v)-> viewModel.clickSuperscript()}"
+                android:src="@mipmap/superscript"
+                />
+
+                <ImageButton
+                    android:id="@+id/action_strikethrough"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:background="@null"
+                android:contentDescription="@null"
+                android:onClickListener="@{(v)-> viewModel.clickStrikethrough()}"
+                android:src="@mipmap/strikethrough"
+                />
+
+                <ImageButton
+                    android:id="@+id/action_underline"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:background="@null"
+                android:contentDescription="@null"
+                android:onClickListener="@{(v)-> viewModel.clickUnderline()}"
+                android:src="@mipmap/underline"
+                />
+
+                <ImageButton
+                    android:id="@+id/action_heading1"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:background="@null"
+                android:contentDescription="@null"
+                android:onClickListener="@{(v)-> viewModel.clickHeading1()}"
+                android:src="@mipmap/h1"
+                />
+
+                <ImageButton
+                    android:id="@+id/action_heading2"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:background="@null"
+                android:contentDescription="@null"
+                android:onClickListener="@{(v)-> viewModel.clickHeading2()}"
+                android:src="@mipmap/h2"
+                />
+
+                <ImageButton
+                    android:id="@+id/action_heading3"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:background="@null"
+                android:contentDescription="@null"
+                android:onClickListener="@{(v)-> viewModel.clickHeading3()}"
+                android:src="@mipmap/h3"
+                />
+
+                <ImageButton
+                    android:id="@+id/action_heading4"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:background="@null"
+                android:contentDescription="@null"
+                android:onClickListener="@{(v)-> viewModel.clickHeading4()}"
+                android:src="@mipmap/h4"
+                />
+
+                <ImageButton
+                    android:id="@+id/action_heading5"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:background="@null"
+                android:contentDescription="@null"
+                android:onClickListener="@{(v)-> viewModel.clickHeading5()}"
+                android:src="@mipmap/h5"
+                />
+
+                <ImageButton
+                    android:id="@+id/action_heading6"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:background="@null"
+                android:contentDescription="@null"
+                android:onClickListener="@{(v)-> viewModel.clickHeading6()}"
+                android:src="@mipmap/h6"
+                />
+
+                <ImageButton
+                    android:id="@+id/action_txt_color"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:background="@null"
+                android:contentDescription="@null"
+                android:onClickListener="@{(v)-> viewModel.clickTextColor()}"
+                android:src="@mipmap/txt_color"
+                />
+
+                <ImageButton
+                    android:id="@+id/action_bg_color"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:background="@null"
+                android:contentDescription="@null"
+                android:onClickListener="@{(v)-> viewModel.clickBackGroundColor()}"
+                android:src="@mipmap/bg_color"
+                />
+
+
+                <ImageButton
+                    android:id="@+id/action_indent"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:background="@null"
+                android:contentDescription="@null"
+                android:onClickListener="@{(v)-> viewModel.clickIndent()}"
+                android:src="@mipmap/indent"
+                />
+
+                <ImageButton
+                    android:id="@+id/action_outdent"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:background="@null"
+                android:contentDescription="@null"
+                android:onClickListener="@{(v)-> viewModel.clickOutdent()}"
+                android:src="@mipmap/outdent"
+                />
+
+                <ImageButton
+                    android:id="@+id/action_align_left"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:background="@null"
+                android:contentDescription="@null"
+                android:onClickListener="@{(v)-> viewModel.clickAlignLeft()}"
+                android:src="@mipmap/justify_left"
+                />
+
+                <ImageButton
+                    android:id="@+id/action_align_center"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:background="@null"
+                android:contentDescription="@null"
+                android:onClickListener="@{(v)-> viewModel.clickAlignCenter()}"
+                android:src="@mipmap/justify_center"
+                />
+
+                <ImageButton
+                    android:id="@+id/action_align_right"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:background="@null"
+                android:contentDescription="@null"
+                android:onClickListener="@{(v)-> viewModel.clickAlignRight()}"
+                android:src="@mipmap/justify_right" />
+
+                <ImageButton
+                    android:id="@+id/action_insert_bullets"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:background="@null"
+                android:contentDescription="@null"
+                android:onClickListener="@{(v)-> viewModel.clickInsertBullets()}"
+                android:src="@mipmap/bullets" />
+
+                <ImageButton
+                    android:id="@+id/action_insert_numbers"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:background="@null"
+                android:contentDescription="@null"
+                android:onClickListener="@{(v)-> viewModel.clickInsertNumbers()}"
+                android:src="@mipmap/numbers" />
+
+                <ImageButton
+                    android:id="@+id/action_blockquote"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:background="@null"
+                android:contentDescription="@null"
+                android:onClickListener="@{(v)-> viewModel.clickBlockQuote()}"
+                android:src="@mipmap/blockquote" />
+
+                <ImageButton
+                    android:id="@+id/action_insert_image"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:background="@null"
+                android:contentDescription="@null"
+                android:onClickListener="@{(v)-> viewModel.clickInsertImage()}"
+                android:src="@mipmap/insert_image" />
+
+                <ImageButton
+                    android:id="@+id/action_insert_link"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:background="@null"
+                android:contentDescription="@null"
+                android:onClickListener="@{(v)-> viewModel.clickInsertLink()}"
+                android:src="@mipmap/insert_link" />
+
+                <ImageButton
+                    android:id="@+id/action_insert_checkbox"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:background="@null"
+                android:onClickListener="@{(v)-> viewModel.clickInsertCheckbox()}"
+                android:contentDescription="@null"
+                android:src="@android:drawable/checkbox_on_background" />
+
+            </LinearLayout>
+        </HorizontalScrollView>
+
+        <jp.wasabeef.richeditor.RichEditor
+            android:id="@+id/rich_editor"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:onTextChangeListener="@{(text)->viewModel.updateContent(text)}"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/horizontal_scroll_view" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
