--- a/app/src/main/res/layout/fragment_add.xml
+++ b/app/src/main/res/layout/fragment_add.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <data>
+        <import type="android.view.View" />
         <variable
             name="viewModel"
             type="com.google.norinori6791.cycledo.ui.add.AddViewModel" />
@@ -29,6 +30,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/colorPrimaryDark"
+            android:visibility="@{viewModel.showEditMenu ? View.VISIBLE : View.GONE}"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/titleEditText">
 
@@ -308,6 +310,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:onTextChangeListener="@{(text)->viewModel.updateContent(text)}"
+            android:onFocusChangeListener="@{( v, hasFocus) -> viewModel.changeEditMenu(hasFocus)}"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/horizontal_scroll_view" />
 
