--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -13,9 +13,9 @@
 
     <fragment
         android:id="@+id/nav_add"
-        android:name="com.google.norinori6791.cycledo.ui.add.AddFragment"
+        android:name="com.google.norinori6791.cycledo.ui.edit.EditFragment"
         android:label="@string/menu_add"
-        tools:layout="@layout/fragment_add" />
+        tools:layout="@layout/fragment_edit" />
 
     <fragment
         android:id="@+id/nav_slideshow"
