登録後にList画面に画面遷移する処理を追加

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -8,14 +8,20 @@
     <fragment
         android:id="@+id/nav_list"
         android:name="com.google.norinori6791.cycledo.ui.list.ListFragment"
-        android:label="@string/menu_list"
-        tools:layout="@layout/fragment_list" />
+        tools:layout="@layout/fragment_list" >
+        <action
+            android:id="@+id/action_nav_list_to_nav_edit"
+            app:destination="@id/nav_edit" />
+    </fragment>
 
     <fragment
-        android:id="@+id/nav_add"
+        android:id="@+id/nav_edit"
         android:name="com.google.norinori6791.cycledo.ui.edit.EditFragment"
-        android:label="@string/menu_add"
-        tools:layout="@layout/fragment_edit" />
+        tools:layout="@layout/fragment_edit" >
+        <action
+            android:id="@+id/action_nav_edit_to_nav_list"
+            app:destination="@id/nav_list" />
+    </fragment>
 
     <fragment
         android:id="@+id/nav_slideshow"
