--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -9,7 +9,7 @@
             android:icon="@drawable/ic_menu_camera"
             android:title="@string/menu_list" />
         <item
-            android:id="@+id/nav_add"
+            android:id="@+id/nav_edit"
             android:icon="@drawable/ic_menu_gallery"
             android:title="@string/menu_add" />
         <item
