--- a/app/src/main/res/layout/list_task.xml
+++ b/app/src/main/res/layout/list_task.xml
@@ -24,6 +24,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
             android:background="@drawable/title_try_number_1"
+            android:textColor="@color/colorWhite"
             android:gravity="center"
             android:inputType="number"
             android:padding="4dp"
