--- a/app/src/main/res/layout/article_detail.xml
+++ b/app/src/main/res/layout/article_detail.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
     <data>
         <variable
             name="viewModel"
@@ -9,12 +11,25 @@
             type="com.google.norinori6791.cycledo.model.data.Task" />
     </data>
 <androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:onClickListener="@{()->viewModel.closeArticleDetail()}"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
+    <com.google.norinori6791.cycledo.util.EqualWidthHeightTextView
+        android:id="@+id/article_detail_try_num"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:gravity="center"
+        android:inputType="number"
+        android:padding="4dp"
+        android:text="@{Integer.toString(item.status)}"
+        android:textColor="@color/colorWhite"
+        android:textSize="18dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="10" />
 
     <TextView
         android:id="@+id/article_detail_title_textview"
@@ -23,10 +38,11 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="TextView"
-        tools:text="@{item.title}"
+        android:textColor="@color/colorPrimary"
         android:textSize="24sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toEndOf="@+id/article_detail_try_num"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="@{item.title}" />
 
     <TextView
         android:id="@+id/article_detail_add_date_title_textview"
@@ -73,11 +89,12 @@
     <TextView
         android:id="@+id/textView7"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:text="@{item.html}"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/article_detail_update_date_textview" />
