--- a/app/src/main/res/layout/condition_item.xml
+++ b/app/src/main/res/layout/condition_item.xml
@@ -10,8 +10,7 @@
         android:id="@+id/condition_item_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="3dp"
-        android:paddingBottom="3dp">
+        android:background="?android:attr/selectableItemBackground">
 
         <TextView
             android:id="@+id/condition_title"
@@ -20,7 +19,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
             android:text="@{display}"
-            android:textSize="16sp"
+            android:textSize="24sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
