--- a/app/src/main/res/layout/condition_item.xml
+++ b/app/src/main/res/layout/condition_item.xml
@@ -16,6 +16,7 @@
             android:id="@+id/condition_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
             android:text="@{display}"
