#37 サイクルのリセット機能追加

--- a/app/src/main/res/layout/list_task.xml
+++ b/app/src/main/res/layout/list_task.xml
@@ -50,7 +50,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:text="@{item.addDate}"
+            android:text="@{item.startDate}"
             app:layout_constraintStart_toEndOf="@+id/list_add_date_title"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="YYYY/MM/DD" />
