--- a/app/src/main/res/menu/fragment_edit.xml
+++ b/app/src/main/res/menu/fragment_edit.xml
@@ -10,9 +10,14 @@
             android:icon="@drawable/ic_done_white_24dp"
             app:showAsAction="ifRoom" />
         <item
-            android:id="@+id/action_settings"
+            android:id="@+id/action_cycle_reset"
             android:orderInCategory="100"
-            android:title="@string/action_settings"
+            android:title="@string/edit_menu_cycle_reset"
+            app:showAsAction="never" />
+        <item
+            android:id="@+id/action_cycle_reset_all"
+            android:orderInCategory="100"
+            android:title="@string/edit_menu_cycle_reset_all"
             app:showAsAction="never" />
     </group>
 
