--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,4 +17,9 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <style name="ToolbarTheme" parent="AppTheme.NoActionBar">
+        <item name="android:textSize">28dp</item>
+        <item name="android:fontFamily">@font/comic_neue_regular</item>
+    </style>
+
 </resources>
