--- a/app/src/main/res/layout/fragment_edit.xml
+++ b/app/src/main/res/layout/fragment_edit.xml
@@ -34,6 +34,8 @@
             android:layout_marginEnd="16dp"
             android:layout_x="264dp"
             android:layout_y="-52dp"
+            android:visibility="@{viewModel.isSelectedTags ? View.GONE : View.VISIBLE}"
+            android:onClickListener="@{(v)-> viewModel.startSelectTag()}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/ic_label_outline_green_24dp" />
@@ -46,6 +48,8 @@
             android:layout_marginEnd="16dp"
             android:layout_x="264dp"
             android:layout_y="-52dp"
+            android:visibility="@{viewModel.isSelectedTags ? View.VISIBLE : View.GONE}"
+            android:onClickListener="@{(v)-> viewModel.startSelectTag()}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/ic_label_green_24dp" />
