ラベル入力のTextBoxにhintを追加

--- a/app/src/main/res/layout/dialog_select_tag.xml
+++ b/app/src/main/res/layout/dialog_select_tag.xml
@@ -34,6 +34,7 @@
         android:layout_marginTop="8dp"
         android:ems="10"
         android:inputType="textPersonName"
+        android:hint="@string/select_tag_message_hint"
         android:text="@={viewModel.inputTag}"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
