--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -29,9 +29,9 @@
 
     <fragment
         android:id="@+id/nav_slideshow"
-        android:name="com.google.norinori6791.cycledo.ui.slideshow.SlideshowFragment"
+        android:name="com.google.norinori6791.cycledo.ui.label.LabelFragment"
         android:label="@string/menu_slideshow"
-        tools:layout="@layout/fragment_slideshow" />
+        tools:layout="@layout/fragment_label" />
 
     <fragment
         android:id="@+id/nav_tools"
