--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -28,9 +28,9 @@
     </fragment>
 
     <fragment
-        android:id="@+id/nav_slideshow"
+        android:id="@+id/nav_label"
         android:name="com.google.norinori6791.cycledo.ui.label.LabelFragment"
-        android:label="@string/menu_slideshow"
+        android:label="@string/list_label"
         tools:layout="@layout/fragment_label" />
 
     <fragment
