ラベル編集画面作成（処理未作成）

--- a/app/src/main/res/layout/list_label.xml
+++ b/app/src/main/res/layout/list_label.xml
@@ -19,6 +19,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:onLongClickListener="@{()-> viewModel.labelLongClick(tag)}"
     android:onClickListener="@{()-> viewModel.labelClick(tag)}">
 
     <TextView
