--- a/app/src/main/res/menu/fragment_label_edit.xml
+++ b/app/src/main/res/menu/fragment_label_edit.xml
@@ -13,6 +13,7 @@
             android:id="@+id/action_delete"
             android:orderInCategory="100"
             android:title="@string/label_edit_delete"
+            android:icon="@drawable/ic_delete_white_24dp"
             app:showAsAction="ifRoom" />
     </group>
 
