アイコン変更

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -6,15 +6,15 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_list"
-            android:icon="@drawable/ic_menu_camera"
+            android:icon="@drawable/ic_baseline_format_list_bulleted_24"
             android:title="@string/menu_list" />
         <item
             android:id="@+id/nav_edit"
-            android:icon="@drawable/ic_menu_gallery"
+            android:icon="@drawable/ic_baseline_add_circle_24"
             android:title="@string/menu_add" />
         <item
             android:id="@+id/nav_label"
-            android:icon="@drawable/ic_menu_slideshow"
+            android:icon="@drawable/ic_baseline_label_24"
             android:title="@string/list_label" />
         <item
             android:id="@+id/nav_tools"
@@ -25,9 +25,9 @@
     <item android:title="Communicate">
         <menu>
             <item
-                android:id="@+id/nav_send"
-                android:icon="@drawable/ic_menu_send"
-                android:title="@string/menu_send" />
+                android:id="@+id/nav_dust"
+                android:icon="@drawable/ic_delete_black_24dp"
+                android:title="@string/menu_dust" />
         </menu>
     </item>
 
