--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -60,6 +60,6 @@
 
     <fragment
         android:id="@+id/nav_send"
-        android:name="com.google.norinori6791.cycledo.ui.send.SendFragment"
+        android:name="com.google.norinori6791.cycledo.ui.dust.DustFragment"
         tools:layout="@layout/fragment_send" />
 </navigation>
